[tool.poetry]
name = "go_back_n"
version = "0.1.0"
description = ""
authors = ["Liam Diprose <liam@liamdiprose.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
